--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
-pipeline{
-agent any{ 
+pipeline {
+agent any 
 stages{
 stage('Maven Compile'){
 steps{
@@ -19,4 +19,4 @@ steps{
  bat label: 'Project packaging',
  script:'''mvn package'''
 }}
-}}}
+}}
