--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,24 +3,8 @@ agent any
 stages {
 stage ('Compile Stage') {
 steps {
-withMaven(maven : 'apache-maven-3.6.3') {
-bat'mvn clean compile'
-}
-}
-}
-stage ('Testing Stage') {
-steps {
-withMaven(maven : 'apache-maven-3.6.3') {
-bat'mvn test'
-}
-}
-}
-stage ('Install Stage') {
-steps {
-withMaven(maven : 'apache-maven-3.6.3') {
-bat'mvn install'
-}
-}
-}
+echo 'Project compiling'
+bat label:'compilation running',script:'''mvn compile'''
+}}
 }
 }
