--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ stages {
 stage ('Compile Stage') {
 steps {
 echo 'Project compiling'
-bat label:'compilation running',script:'''mvn compile'''
+bat label:'compilation running',script:'mvn compile'
 }}
 }
 }
