--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,5 +10,16 @@ stages {
 stage('build') {
    steps {
 withMaven(maven : 'apache-maven-3.6.3') {
-bat'mvn clean compile'
-}}}}}
+bat'mvn  compile'
+}}}
+stage('testing') {
+   steps {
+withMaven(maven : 'apache-maven-3.6.3') {
+bat'mvn test'
+}}}
+stage('packaging') {
+   steps {
+withMaven(maven : 'apache-maven-3.6.3') {
+bat'mvn package'
+}}}
+}}
